FIX: fix caching issue when running tests together